# patrolbot_ws

./: Changes being made  README.md
Arduino/: basic with all function.ino  latest.ino  original.ino  patrol.ino  ros2_control.ino  ros2_control_extra.ino  ros2_new-trial.ino
Arduino/description/urdf/: camera.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/robot_base/src/: odometry_node.cpp
src/robot_bringup/: CMakeLists.txt  setup.py
src/robot_bringup/config/: diffbot_controllers.yaml
src/robot_bringup/launch/: diffbot.launch.py  full_system.launch.py  full_system_no_rp.launch.py  full_with_ros2_control.launch.py  manual_mode.launch.py  ros2_control.launch.py
src/robot_bringup/robot_bringup/: bringup.launch.py
src/robot_desc/: CMakeLists.txt  package.xml
src/robot_desc/config/: test_controllers.yaml
src/robot_desc/launch/: display.launch.py  ros2_control.launch.py
src/robot_desc/urdf/: diff_robot.urdf  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware_plugin.xml
src/robot_hardware/include/robot_hardware/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
src/robot_hardware/launch/: diffbot.launch.py
src/robot_hardware/src/: diffbot_system.cpp
